# GeoHint

./: .directory  GeoHint.cabal  LICENSE  README.md  stack.yaml
app/: Main.hs
src/: DataTypes.hs  Experiment.hs  GeoGebraParser.hs  GeoLibrary.hs  GeoSynth.hs  Programs.hs  Rules.hs  Strategies.hs
src/Ideas/Encoding/: EncoderHTML.hs
src/Ideas/Main/: Revision.hs
src/Ideas/Text/: XML.hs
